@@ -357,7 +357,9 @@ class AboutBox(dialog.Dialog):
         except OSError:
             ver = None
         if not ver:
-            warnings.warn(f"Could not read pywin32's version from '{version_path}'")
+            warnings.warn(
+                f"Could not read pywin32's version from '{version_path}'", stacklevel=2
+            )
         self.SetDlgItemText(win32ui.IDC_ABOUT_VERSION, ver)
         self.HookCommand(self.OnButHomePage, win32ui.IDC_BUTTON1)
 
