@@ -6,6 +6,7 @@ import warnings
 warnings.warn(
     "The regcheck module has been deprecated and pending removal since build 210",
     category=DeprecationWarning,
+    stacklevel=2,
 )
 
 import os
